guition-p4-rev1.3-4.3/v0.96.00-beta/README_kr.md
# StajPilot v0.96.00-beta — Guition JC4880P443C_I_W

**이건 베타 버전입니다.** 현재 안정 버전인 [v0.95.00](../v0.95.00)보다 최신이지만
검증은 덜 됐습니다. 이번 버전의 핵심 신기능인 USB 호스트 모드는 이 프로젝트에서
완전히 새로운 하드웨어/펌웨어 영역입니다 — 필요하지 않다면 지금은 v0.95.00을
쓰는 게 더 안전합니다.

## 이번 버전에서 달라진 점

아래 내용은 모두 v0.95.00 이후로 쌓인 변경사항입니다 — 이 베타가 처음으로
공개 배포되는 버전입니다.

- **뱅크 전환 스와이프 (신규)** — 릭 이름 아래부터 화면 하단까지 좌우로 스와이프해서
  이전/다음 뱅크로 이동할 수 있습니다. 기존의 `</>` 전용 버튼 대신이라, 슬롯
  버튼을 더 크게 쓸 수 있게 됐습니다. 설정 화면의 새 **SWIPE NAV** 체크박스로
  끄면 예전 버튼 방식으로 돌아갑니다 — 어느 쪽을 선택해도 기능은 그대로 유지됩니다.
- **슬롯 라벨 두 번째 줄 ("sub swipe")** — SWIPE NAV가 켜져 있을 때, 각 슬롯 버튼에
  기존 5자짜리 짧은 라벨 대신 최대 12자짜리 긴 보조 라벨을 표시할 수 있습니다.
  스와이프 모드가 여유 공간을 만들어주기 때문입니다. 웹 설정 페이지에서 슬롯별로
  설정하며, 비워두면 자동으로 기존 짧은 라벨로 대체됩니다.
- **MIDI CHANNEL 조작 방식 변경** — 스크롤 롤러에서 BOX/FIXED FX와 같은 드롭다운
  방식으로 바뀌었습니다.
- **웹 설정 페이지**: 곡/슬롯 편집기의 열 너비가 글자 수에 맞춰 자동으로 조정되고,
  라벨/문구도 몇 군데 다듬었습니다.

- **USB 호스트 모드 (신규)** — 보드의 Full-Speed USB-C 포트가 이제 USB MIDI
  **호스트** 역할을 할 수 있어서, 켐퍼의 USB-B 디바이스 포트에 직접 연결할 수
  있습니다. 이 기능은 다른 USB MIDI 기기를 보드에 연결할 수 있도록 개발됐으며,
  단방향(송신 전용) 기기와 양방향(송수신) 기기를 모두 지원합니다. 새 **USB
  MODE** 페이지(대기 화면에서, 또는 설정 화면에서 접근 가능)에서 고를 수 있는
  세 가지 모드가 있고, 전원을 켤 때 한 번 고정됩니다:
  - **DEVICE** (기존/기본 동작) — High-Speed 포트가 USB MIDI 디바이스로,
    켐퍼의 USB-A 호스트 포트에 연결.
  - **HOST** — Full-Speed 포트가 USB MIDI 호스트로, 켐퍼의 USB-B 디바이스 포트에
    연결. 켐퍼 자체의 USB-A 호스트 포트를 실제 풋컨트롤러용으로 비워줄 수 있습니다.
    usb hub를 통하여 두개의 기기를 캠퍼에 연결시 에러가 발생할수 있습니다.
    이를 해결하였습니다.
  - **DEVICE -> HOST** — 두 가지를 동시에: High-Speed 포트에서 켐퍼로부터 디바이스로
    수신하고, 받은 모든 MIDI 이벤트를 Full-Speed 호스트 포트를 통해 연결된 다른
    MIDI 기기로 전달합니다. 현재 버전에서는 단방향(켐퍼 -> 하위 기기)만 지원하며, 하위기기에서
    상위기기로의 전달은 불필요한 메시지 필터링중입니다. 기능은 이미 구현되어 있으며,
    캠퍼에게 최소한의 폴링 요청만 하기위해 기능을 막아놓은 상태입니다.
    눈으로 보기에는 동일한 기능을 하지만, 방법에 따라 캠퍼에게 많은 부하를 주며, 이는 안정성을
    안정성을 해칠수 있습니다. 현재 캠퍼플레이어 사용자들이 많이 쓰시는 컨트롤러로 테스트중입니다.
    

  모드를 바꾸면 설정만 저장됩니다 — 다음 전원을 켤 때 적용되며, 동작 중에 실시간으로
  전환되지 않습니다.

- **모프 상태 표시** — 큰 뱅크/릭 번호 옆에 켐퍼의 모프 페달 위치를
  실시간으로 보여주는 작은 표시기입니다. 값이 안 바뀔 땐 기본적으로 숨겨져 있고,
  실제로 값이 바뀔 때만 나타나서 화면을 어지럽히지 않습니다. 새 **MORPH**
  설정(None / Slow / Med / Fast)으로 확인 주기를 조절할 수 있으며 — 모프를
  사용하지 않고 추가 MIDI 트래픽도 원하지 않는다면 None으로 두면 폴링 자체가
  꺼집니다.

  **참고:** 그동안 숨겨놓았던 이 기능은 타이머로 켐퍼에 주기적으로 값을 물어보는 방식으로 동작합니다
  (Slow / Med / Fast) — 값이 안 바뀌어도 약간의 MIDI 트래픽이
  계속 발생하며, 속도를 높일수록 폴링이 더 자주 일어납니다. 모프 페달을 실제로
  사용하면서 화면으로 위치를 직접 확인하고 싶은 경우가 아니라면 **None**으로
  두는 걸 권장합니다. 

## 알려진 제한사항 (베타 한정)

- USB 호스트 모드는 새로 추가된 기능이라, 기존 v0.95.00부터 변경 없이 그대로
  작동하는 Device 모드 켐퍼 연결에 비해 실사용 검증이 상대적으로 부족합니다.
  어떤 USB 모드를 선택하든 기존 Device 모드 연결 자체는 그대로 작동합니다.
- DEVICE -> HOST 전달은 단방향(켐퍼 -> 하위 기기)만 지원합니다. 하위 기기가
  보내는 MIDI는 아직 읽거나 처리하지 않습니다.
- HOST 모드는 MIDI 클래스 USB 기기를 인식하는 방식이며, 개발 중 사용 가능했던
  기기 외의 모든 USB MIDI 기기로 테스트되지는 않았습니다.

## 파일

- `stajpilot_v0.96.00-beta_JC4880P443C_I_W_update_firmware.bin` — 앱만
  업데이트합니다. 이미 정상 작동하는 기기가 있다면 이걸 사용하세요 — 곡 목록,
  WiFi 설정 등 저장된 내용이 그대로 유지됩니다.
- `stajpilot_v0.96.00-beta_JC4880P443C_I_W_factory_merged.bin` — 전체 이미지
  (부트로더 + 파티션 테이블 + 앱). 최초 설치나 완전 복구 시에만 사용하세요 —
  **저장된 곡/WiFi 설정이 모두 지워집니다.**

## 설치 방법

**가장 쉬운 방법: 브라우저에서 바로 플래시** — 별도 소프트웨어 설치 없이,
데스크톱 컴퓨터의 Chrome 또는 Edge에서 진행할 수 있습니다:

### 👉 [stajd.github.io](https://stajd.github.io/)

목록에서 "Guition JC4880P4 (BETA)"를 선택하고 화면에 나오는 안내를 따라가세요 —
보드를 업로드 모드로 진입시키는 방법까지 전부 안내됩니다.

## 플래시: 일반 업데이트 (곡/WiFi 설정 유지)

```
esptool.py --chip esp32p4 --port <PORT> --baud 460800 \
  write_flash 0x10000 stajpilot_v0.96.00-beta_JC4880P443C_I_W_update_firmware.bin
```

플래시 오프셋 `0x10000`. 파티션 테이블을 쓰지 않고, SPIFFS/NVS도 포맷하지 않습니다.

## 플래시: 최초 설치 / 복구 (SPIFFS + NVS 초기화)

```
esptool.py --chip esp32p4 --port <PORT> --baud 460800 \
  write_flash 0x0 stajpilot_v0.96.00-beta_JC4880P443C_I_W_factory_merged.bin
```

플래시 오프셋 `0x0`. 부트로더는 `0x2000`, 파티션 테이블은 `0x8000`, 앱은
`0x10000`에 위치하며 하나로 병합된 이미지입니다. 최초 설치/복구 시에만 사용하세요.
